<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DespesaFragment">

    <TextView
        android:id="@+id/tvNomeD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="21dp"
        android:text="@string/nome_ra"
        app:layout_constraintBottom_toTopOf="@+id/btnBuscarD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etIdD"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/id_d"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btnBuscarD"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBuscarD" />

    <Button
        android:id="@+id/btnBuscarD"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="#059908"
        android:text="@string/buscar"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etCategoriaD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etIdD"
        app:layout_constraintTop_toBottomOf="@+id/tvNomeD" />

    <EditText
        android:id="@+id/etCategoriaD"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/categoria_despesa"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etValorD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscarD" />

    <EditText
        android:id="@+id/etValorD"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/valor_despesa"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etDataD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCategoriaD" />

    <EditText
        android:id="@+id/etFormaD"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/forma_pagamento"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnInserirD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataD" />

    <Button
        android:id="@+id/btnInserirD"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#059908"
        android:text="@string/inserir"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnEditarD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFormaD" />

    <Button
        android:id="@+id/btnEditarD"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#059908"
        android:text="@string/editar"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnListarD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirD" />

    <Button
        android:id="@+id/btnListarD"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#059908"
        android:text="@string/listar"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnExcluirD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditarD" />

    <Button
        android:id="@+id/btnExcluirD"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="14dp"
        android:backgroundTint="#059908"
        android:text="@string/excluir"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvListarD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListarD" />

    <TextView
        android:id="@+id/tvListarD"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExcluirD" />

    <EditText
        android:id="@+id/etDataD"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/data_despesa"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etFormaD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValorD" />

</androidx.constraintlayout.widget.ConstraintLayout>