<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentReceita"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReceitaFragment">

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="21dp"
        android:text="@string/nome_ra"
        app:layout_constraintBottom_toTopOf="@+id/btnBuscarR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etFonteR"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/fonte"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etValorR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscarR" />

    <EditText
        android:id="@+id/etValorR"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/valor_receita"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etDataR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFonteR" />

    <EditText
        android:id="@+id/etCategoriaR"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="@string/categoria_receita"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnInserirR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataR" />

    <Button
        android:id="@+id/btnBuscarR"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="14dp"
        android:backgroundTint="#059908"
        android:text="@string/buscar"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etFonteR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etIdR"
        app:layout_constraintTop_toBottomOf="@+id/tvNome" />

    <Button
        android:id="@+id/btnInserirR"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="11dp"
        android:backgroundTint="#059908"
        android:text="@string/inserir"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnEditarR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCategoriaR" />

    <Button
        android:id="@+id/btnEditarR"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="13dp"
        android:backgroundTint="#059908"
        android:text="@string/editar"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnListarR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirR" />

    <Button
        android:id="@+id/btnListarR"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="13dp"
        android:backgroundTint="#059908"
        android:text="@string/listar"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnExcluirR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditarR" />

    <Button
        android:id="@+id/btnExcluirR"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="13dp"
        android:backgroundTint="#059908"
        android:text="@string/excluir"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvListarR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListarR" />

    <EditText
        android:id="@+id/etIdR"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="@string/id_r"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etFonteR"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNome" />

    <TextView
        android:id="@+id/tvListarR"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExcluirR" />

    <EditText
        android:id="@+id/etDataR"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:hint="@string/data_receita"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/etCategoriaR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValorR" />

</androidx.constraintlayout.widget.ConstraintLayout>